gccida/g0/purge_single_hard_subreg_set
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/purge_single_hard_subreg_set/src/function.c:3965:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+10h] [rbp-10h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/purge_single_hard_subreg_set/src/function.c:3976:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( reg->fld[0].rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/purge_single_hard_subreg_set/src/function.c:3978:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)reg + 2)); 
  ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/purge_single_hard_subreg_set/src/obj/function.o] Error 1
